# SDL_gesture

./: CMakeLists.txt  README.md  SDL_gesture.h  example.c
.github/workflows/: main.yml
cmake/: FindSDL2test.cmake  SDL_gestureConfig.cmake.in
test/: CMakeLists.txt  testgesture.c
